# KanSolo

./: CMakeLists.txt  README.md
cmake/: build.cmake
common/database/: CMakeLists.txt
common/database/inc/: DataType.hpp  DataTypeFactory.h  DatabaseCommon.hpp  DatabaseConnection.hpp  DatabaseConnectionFactory.h  DatabaseUtils.h  QueryBuilder.h  QueryResult.hpp  ResultDataRow.h  ResultDataTable.h
common/database/inc/connections/: SQLiteConnection.h
common/database/inc/results/: SQLiteQueryResult.h
common/database/inc/types/: BoolType.h  DateType.h  Float32Type.h  Float64Type.h  Int16Type.h  Int32Type.h  Int64Type.h  Int8Type.h  NullType.h  StringType.h  TimeType.h  UInt16Type.h  UInt32Type.h  UInt64Type.h  UInt8Type.h
common/database/src/: DataTypeFactory.cpp  DatabaseConnectionFactory.cpp  DatabaseUtils.cpp  QueryBuilder.cpp  ResultDataRow.cpp  ResultDataTable.cpp
common/database/src/connections/: SQLiteConnection.cpp
common/database/src/results/: SQLiteQueryResult.cpp
common/database/src/types/: BoolType.cpp  DateType.cpp  Float32Type.cpp  Float64Type.cpp  Int16Type.cpp  Int32Type.cpp  Int64Type.cpp  Int8Type.cpp  NullType.cpp  StringType.cpp  TimeType.cpp  UInt16Type.cpp  UInt32Type.cpp  UInt64Type.cpp  UInt8Type.cpp
common/utility/inc/: DateUtils.hpp  StringBuilder.h
common/utility/src/: StringBuilder.cpp
products/KanSolo/: CMakeLists.txt
products/KanSolo/inc/: KanSoloBoard.h  KanSoloProject.h  KanSoloProjectManager.h  KanSoloSprint.h  KanSoloTask.h  KanSoloTheme.h  UIKanSoloBoard.h  UIKanSoloCreateNewBoard.h  UIKanSoloCreateNewProject.h  UIKanSoloCreateNewSprint.h  UIKanSoloCreateNewTask.h  UIKanSoloMain.h  UIKanSoloTaskTile.h
products/KanSolo/resx/: imgLogo.ufo  resources.qrc
products/KanSolo/resx/themes/Black Board/: imgExit.ufo  imgNewBoard.ufo  imgNewTask.ufo
products/KanSolo/resx/themes/Graffiti Board/: imgExit.ufo  imgNewBoard.ufo  imgNewTask.ufo
products/KanSolo/resx/themes/Home Depot/: imgNewBoard.ufo  imgNewTask.ufo
products/KanSolo/src/: KanSoloBoard.cpp  KanSoloProject.cpp  KanSoloProjectManager.cpp  KanSoloSprint.cpp  KanSoloTask.cpp  KanSoloTheme.cpp  UIKanSoloBoard.cpp  UIKanSoloCreateNewBoard.cpp  UIKanSoloCreateNewBoard.ui  UIKanSoloCreateNewProject.cpp  UIKanSoloCreateNewProject.ui  UIKanSoloCreateNewSprint.cpp  UIKanSoloCreateNewSprint.ui  UIKanSoloCreateNewTask.cpp  UIKanSoloCreateNewTask.ui  UIKanSoloMain.cpp  UIKanSoloMain.ui  UIKanSoloTaskTile.cpp  UIKanSoloTaskTile.ui  main.cpp
products/KanSolo/src/old/: UIKanSoloMain.cpp  UIKanSoloMain.ui
